dded CV and Grades

--- a/encrypted/index.html
+++ b/encrypted/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Harry's Site</title>
+    <title>Insights | Harry's Site</title>
 
     <link rel="stylesheet" href="../home.css" />
 
@@ -33,6 +33,7 @@
         <a href="./pages/workexperience.html">Work Experience</a>
         <a href="./pages/politics.html">Politics</a>
         <a href="./pages/cs.html">Computer Science</a>
+        <a href="./pages/history.html">History</a>
         <a href="./pages/cv.html">CV</a>
         <a href="./pages/lor.html">Letters of Recommendation</a>
       </nav>
