--- a/pages/grades.html
+++ b/pages/grades.html
@@ -1,3 +1,390 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Academic Grades – MrHarryW</title>
+
+  <style>
+    :root {
+      --bg: #000000;
+      --card: #ffffff;
+      --text: #e7e7e7;
+      --muted: #6b7280;
+      --accent: #bbfab9;
+      --border: #e5e7eb;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    }
+
+    body {
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+      padding: 2rem 1rem;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    header {
+      margin-bottom: 2rem;
+    }
+
+    header h1 {
+      font-size: 2rem;
+      margin-bottom: 0.25rem;
+    }
+
+    header p {
+      color: var(--muted);
+    }
+
+    .card {
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      padding: 1.5rem;
+      margin-bottom: 2rem;
+    }
+
+    .card h2 {
+      font-size: 1.25rem;
+      margin-bottom: 1rem;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 0.95rem;
+    }
+
+    thead {
+      background: #bfffac;
+    }
+
+    th, td {
+      padding: 0.75rem;
+      text-align: left;
+      border-bottom: 1px solid var(--border);
+    }
+
+    th {
+      font-weight: 600;
+      color: #111827;
+    }
+
+    tbody tr:hover {
+      background: #bdffcb;
+      --accent: black;
+      color: #000000;
+    }
+
+    .grade {
+      font-weight: 600;
+      color: var(--accent);
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.85rem;
+      color: var(--muted);
+      margin-top: 2rem;
+    }
+
+    @media (max-width: 600px) {
+      table, thead, tbody, th, td, tr {
+        display: block;
+      }
+
+      thead {
+        display: none;
+      }
+
+      tr {
+        margin-bottom: 1rem;
+        border: 1px solid var(--border);
+        border-radius: 6px;
+        padding: 0.5rem;
+      }
+
+      td {
+        border: none;
+        padding: 0.4rem 0;
+      }
+
+      td::before {
+        content: attr(data-label);
+        font-weight: 600;
+        display: block;
+        color: var(--muted);
+      }
+    }
+    nav {
+      width: 100%;
+      border-bottom: 1px solid var(--border-subtle);
+      background-color: var(--bg);
+    }
+
+    .nav-inner {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 1rem 1.5rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .nav-inner a {
+      color: var(--text-secondary);
+      text-decoration: none;
+      margin-left: 1.5rem;
+      font-weight: 500;
+    }
+
+    .nav-inner a:hover { color: var(--text-primary); }
+  </style>
+</head>
 <body>
-  Coming Soon
+  <div class="container">
+
+  <nav>
+    <div class="nav-inner">
+      <div class="nav-left">
+        <a href="https://mrharryw.dev">Home</a>
+      </div>
+      <div class="nav-right">
+        <a href="/">Insights</a>
+      </div>
+    </div>
+  </nav>
+
+    <header>
+      <h1>Academic Grades & Qualifications</h1>
+    </header>
+
+    <section>
+      <h2>Predicted Grades</h2>
+      <br>
+      <table>
+        <thead>
+          <tr>
+            <th>Subject</th>
+            <th>Qualification</th>
+            <th>Exam Board</th>
+            <th>Year</th>
+            <th>Grade</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td data-label="Subject">Computer Science</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">OCR</td>
+            <td data-label="Year">2026</td>
+            <td data-label="Grade" class="grade">8</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">History</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">2026</td>
+            <td data-label="Grade" class="grade">8</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">Mathematics</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">2026</td>
+            <td data-label="Grade" class="grade">8</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">Combined Science</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">AQA</td>
+            <td data-label="Year">2026</td>
+            <td data-label="Grade" class="grade">8-8</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">Enterprise</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">2026</td>
+            <td data-label="Grade" class="grade">L2D</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">Further Maths</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">AQA</td>
+            <td data-label="Year">2026</td>
+            <td data-label="Grade" class="grade">7</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">English Literature</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">2026</td>
+            <td data-label="Grade" class="grade">7</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">English Language</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">2026</td>
+            <td data-label="Grade" class="grade">7</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">French</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">2026</td>
+            <td data-label="Grade" class="grade">5</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <br>
+    <section>
+      <h2>Mock Grades</h2>
+      <br>
+      <table>
+        <thead>
+          <tr>
+            <th>Subject</th>
+            <th>Qualification</th>
+            <th>Exam Board</th>
+            <th>Mock</th>
+            <th>Grade</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td data-label="Subject">Computer Science</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">OCR</td>
+            <td data-label="Year">Nov 25</td>
+            <td data-label="Grade" class="grade">7</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">History</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">Nov 25</td>
+            <td data-label="Grade" class="grade">8</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">Mathematics</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">Nov 25</td>
+            <td data-label="Grade" class="grade">7</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">Further Maths</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">AQA</td>
+            <td data-label="Year">Nov 25</td>
+            <td data-label="Grade" class="grade">6</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">Enterprise</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">Nov 25</td>
+            <td data-label="Grade" class="grade">L2M</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">Combined Science</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">AQA</td>
+            <td data-label="Year">Nov 25</td>
+            <td data-label="Grade" class="grade">7-6</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">English Language</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">Nov 25</td>
+            <td data-label="Grade" class="grade">5</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">French</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">Nov 25</td>
+            <td data-label="Grade" class="grade">4</td>
+          </tr>
+        </tbody>
+        <thead>
+          <tr>
+            <th>Subject</th>
+            <th>Qualification</th>
+            <th>Exam Board</th>
+            <th>Mock</th>
+            <th>Grade</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td data-label="Subject">Computer Science</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">OCR</td>
+            <td data-label="Year">July 25</td>
+            <td data-label="Grade" class="grade">9</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">History</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">July 25</td>
+            <td data-label="Grade" class="grade">8</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">Mathematics</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">July 25</td>
+            <td data-label="Grade" class="grade">6</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">Enterprise</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">July 25</td>
+            <td data-label="Grade" class="grade">L2M</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">Combined Science</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">AQA</td>
+            <td data-label="Year">July 25</td>
+            <td data-label="Grade" class="grade">7-7</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">English Literature</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">July 25</td>
+            <td data-label="Grade" class="grade">5</td>
+          </tr>
+          <tr>
+            <td data-label="Subject">French</td>
+            <td data-label="Qualification">GCSE</td>
+            <td data-label="Exam Board">Edexcel</td>
+            <td data-label="Year">July 25</td>
+            <td data-label="Grade" class="grade">4</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+  </div>
 </body>
+</html>
