--- a/pages/cv.html
+++ b/pages/cv.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=../public/cv.pdf">
+    <!-- <meta http-equiv="refresh" content="0; url=../public/cv.pdf"> -->
     <title>Redirecting…</title>
 </head>
 <body>
