--- a/pages/cv.html
+++ b/pages/cv.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=../public/cv.pdf">
+    <meta http-equiv="refresh" content="0; url=/public/cv.pdf">
     <title>Redirecting…</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="../public/cv.pdf" target="_blank">click here to view the CV</a>.</p>
+    <p>If you are not redirected automatically, <a href="/public/cv.pdf" target="_blank">click here to view the CV</a>.</p>
 </body>
 </html>
