--- a/pages/cv.html
+++ b/pages/cv.html
@@ -1,11 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<style>
+    :root {
+      --bg: #3c3c3c;
+      --card: #ffffff;
+      --text: #e7e7e7;
+      --muted: #6b7280;
+      --accent: #bbfab9;
+      --border: #e5e7eb;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    }
+
+    body {
+      background: var(--bg);
+      color: var(--text);
+    }
+    nav {
+      width: 100%;
+      border-bottom: 1px solid var(--border-subtle);
+      background-color: var(--bg);
+      font-size: large;
+    }
+
+    .nav-inner {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 1rem 1.5rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .nav-inner a {
+      color: var(--text-secondary);
+      text-decoration: none;
+      margin-left: 1.5rem;
+      font-weight: 500;
+    }
+
+    .nav-inner a:hover { color: var(--text-primary); }
+</style>
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=/public/cv.pdf">
-    <title>Redirecting…</title>
+    <title>Harry - CV</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="/public/cv.pdf" target="_blank">click here to view the CV</a>.</p>
+    <nav>
+    <div class="nav-inner">
+      <div class="nav-left">
+        <a href="https://mrharryw.dev">Home</a>
+      </div>
+      <div class="nav-right">
+        <a href="/">Insights</a>
+      </div>
+    </div>
+  </nav>
+    <object data="/public/cv.pdf" style="width: 100%; height: 100vh;" type='application/pdf'>
 </body>
 </html>
