--- a/pages/cv.html
+++ b/pages/cv.html
@@ -63,6 +63,6 @@
       </div>
     </div>
   </nav>
-    <object data="/public/cv.pdf" style="width: 100%; height: 100vh;" type='application/pdf'>
+    <object data="/cv/cv.pdf" style="width: 100%; height: 100vh;" type='application/pdf'>
 </body>
 </html>
