--- a/pages/cv.html
+++ b/pages/cv.html
@@ -56,13 +56,13 @@
     <nav>
     <div class="nav-inner">
       <div class="nav-left">
-        <a href="https://mrharryw.dev">Home</a>
+        <a href="https://mrharryw.dev/">Home</a>
       </div>
       <div class="nav-right">
         <a href="/">Insights</a>
       </div>
     </div>
   </nav>
-    <object data="/cv/cv.pdf" style="width: 100%; height: 100vh;" type='application/pdf'>
+    <object data="/cv/cv.pdf" style="width: 100%; height: 100vh;" type='application/pdf'> 
 </body>
 </html>
